tests/paczka1/small_fuzzy/97465676.err
Error in line 10: 1eQ4Lhe A126 49,6
Error in line 11: 1eQ4Lhe S654 56,2
